####################
Bazaar Release Notes
####################

.. contents:: List of Releases
   :depth: 1

bzr 2.1.2
#########

:2.1.2: NOT RELEASED YET

Bug Fixes
*********

* ``bzr switch`` does not die if a ConfigurableFileMerger is used.
  (Aaron Bentley, #559436)

* Fixed ``AssertionError`` when accessing smart servers running Bazaar
  versions before 1.6.
  (Andrew Bennetts, #528041)

* Reset ``siginterrupt`` flag to False every time we handle a signal
  installed with ``set_signal_handler(..., restart_syscall=True)`` (from
  ``bzrlib.osutils``.  Reduces the likelihood of "Interrupted System Call"
  errors after two window resizes.
  (Andrew Bennetts)

Internals
*********

* ``_remember_remote_is_before`` no longer raises AssertionError when
  suboptimal network behaviour is noticed; instead it just mutters to the
  log file (and warns the user if they have set the ``hpss`` debug flag).
  This was causing unnecessary aborts for performance bugs that are minor
  at worst.
  (Andrew Bennetts, #528041)


bzr 2.1.1
#########

:2.1.1: 2010-03-24

This is a small bugfix release.  Upgrading is recommended for anyone
running 2.1.0 or earlier.

Bug Fixes
*********

* Allow syscalls to automatically restart when ``TextUIFactory``'s
  SIGWINCH handler is invoked, avoiding ``EINTR`` errors during blocking
  IO, which are often poorly handled by Python's libraries and parts of
  bzrlib.  (Andrew Bennetts, #496813)

* Avoid ``malloc(0)`` in ``patiencediff``, which is non-portable.
  (Martin Pool, #331095)

* Fix plugin packaging on Windows. (Ian Clatworthy, #524162)

* Fix stub sftp test server to call os.getcwdu().
  (Vincent Ladeuil, #526211, #526353)

* Fixed CHM generation by moving the NEWS section template into
  a separate file. (Ian Clatworthy, #524184)

* Merge correctly when this_tree is not a WorkingTree.  (Aaron Bentley)

* Register SIGWINCH handler only when creating a ``TextUIFactory``; avoids
  problems importing bzrlib from a non-main thread.